--- a/personal-pacman-packages.conf
+++ b/personal-pacman-packages.conf
@@ -1,4 +1,4 @@
 # Comments are allowed
 # Each line should contain a list of packages:
 # packages=package1 package2 etc...
-packages=base-devel firefox flameshot vlc openssh
+packages=firefox flameshot vlc openssh
