Add config settings

--- a/config.conf
+++ b/config.conf
@@ -10,13 +10,13 @@ packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 
 services=dhcpcd.service NetworkManager.service systemd-networkd.service systemd-resolved.service
 boot-path=/mnt/boot
 mount-path=/mnt
-root-password=
-username=
-password=
+root-password=root-password
+username=username
+password=password
 
 [bluetooth]
-packages=bluez
-services=
+packages=bluez bluez-utils
+services=bluetooth.service
 
 [wifi]
 packages=iw iwd
