Parse additional commands

--- a/config.conf
+++ b/config.conf
@@ -36,6 +36,11 @@ packages=steam lutris wine-staging giflib lib32-giflib libpng lib32-libpng libld
 [personal]
 packages=firefox flameshot vlc openssh zsh
 aur-packages=slack-desktop teams onedrive-abraunegg
+command=sudo -S chsh -s $(which zsh)
+command=$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)
+command=git clone https://github.com/zdharma/history-search-multi-word.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}"/plugins/history-search-multi-word
+command=git clone https://github.com/zsh-users/zsh-autosuggestions.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}"/plugins/zsh-autosuggestions
+command=git clone https://github.com/zsh-users/zsh-syntax-highlighting.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}"/plugins/zsh-syntax-highlighting
 
 [work]
 packages=docker docker-compose cuda cuda-tools aws-cli openvpn qtcreator qt6 networkmanager-openvpn
