--- a/config.conf
+++ b/config.conf
@@ -7,7 +7,8 @@
 
 [base]
 packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil dhcpcd networkmanager base-devel
-services=dhcpcd.service NetworkManager.service systemd-networkd.service systemd-resolved.service
+aur-packages=aic94xx-firmware wd719x-firmware upd72020x-fw
+services=dhcpcd.service NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@username.service
 boot-path=/mnt/boot
 mount-path=/mnt
 root-password=root-password
@@ -23,7 +24,7 @@ packages=iw iwd
 services=iwd.service
 
 [desktop]
-packages=xfce4 xfwm4 xfwm4-themes xfce4-pulseaudio-plugin xfce4-wavelan-plugin xfce4-clipman-plugin xfce4-battery-plugin xfce4-wavelan-plugin
+packages=xorg-server xfce4 xfwm4 xfwm4-themes xfce4-pulseaudio-plugin xfce4-wavelan-plugin xfce4-clipman-plugin xfce4-battery-plugin xfce4-wavelan-plugin
 
 [gpu]
 # choices are intel, nvidia, amd (case insensitive)
@@ -46,6 +47,7 @@ command=git clone https://github.com/zsh-users/zsh-syntax-highlighting.git "${ZS
 packages=docker docker-compose cuda cuda-tools aws-cli openvpn qtcreator qt6 networkmanager-openvpn
 aur-packages=nvidia-container-toolkit heroku-cli-bin nvm balena-cli-bin
 services=docker.service
+groups=docker
 
 # [custom-header]
 # packages=
