Add commands and copy commandos

--- a/config.conf
+++ b/config.conf
@@ -8,10 +8,10 @@
 [base]
 packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil dhcpcd networkmanager base-devel
 aur-packages=aic94xx-firmware wd719x-firmware upd72020x-fw
-services=dhcpcd.service NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@username.service
+services=dhcpcd.service NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@bastiaan.service
 boot-path=/mnt/boot
 mount-path=/mnt
-username=username
+username=bastiaan
 
 [bluetooth]
 packages=bluez bluez-utils
