--- a/config.conf
+++ b/config.conf
@@ -17,12 +17,15 @@ username=bastiaan
 packages=bluez bluez-utils
 services=bluetooth.service
 
+[sound]
+packages=pulseaudio pulseaudio-bluetooth
+
 [wifi]
 packages=iw iwd
 services=iwd.service
 
 [desktop]
-packages=xorg-server xfce4 xfwm4 xfwm4-themes xfce4-pulseaudio-plugin xfce4-wavelan-plugin xfce4-clipman-plugin xfce4-battery-plugin xfce4-wavelan-plugin
+packages=xorg-server xfce4 xfwm4 xfwm4-themes xfce4-pulseaudio-plugin xfce4-wavelan-plugin xfce4-clipman-plugin xfce4-battery-plugin xfce4-wavelan-plugin pavucontrol
 
 [gpu]
 # choices are intel, nvidia, amd (case insensitive)
@@ -34,7 +37,7 @@ packages=steam lutris wine-staging giflib lib32-giflib libpng lib32-libpng libld
 
 [personal]
 packages=firefox flameshot vlc openssh zsh
-aur-packages=slack-desktop teams onedrive-abraunegg
+aur-packages=slack-desktop teams onedrive-abraunegg discord
 command=sudo -S chsh -s $(which zsh)
 command=$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)
 command=git clone https://github.com/zdharma/history-search-multi-word.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}"/plugins/history-search-multi-word
