--- a/config.conf
+++ b/config.conf
@@ -25,7 +25,7 @@ packages=iw iwd
 services=iwd.service
 
 [desktop]
-packages=xorg-server lxdm xfce4 xfwm4 xfwm4-themes xfce4-pulseaudio-plugin xfce4-wavelan-plugin xfce4-clipman-plugin xfce4-battery-plugin xfce4-wavelan-plugin pavucontrol
+packages=xorg-server lxdm xfce4 xfwm4 xfwm4-themes xfce4-pulseaudio-plugin xfce4-wavelan-plugin xfce4-clipman-plugin xfce4-battery-plugin pavucontrol
 services=lxdm.service
 
 [gpu]
