Add office alternative

--- a/config.conf
+++ b/config.conf
@@ -48,7 +48,7 @@ command=echo "source /usr/share/nvm/init-nvm.sh" >>"/mnt/home/$username/.zshrc"
 
 [work]
 packages=docker docker-compose cuda cuda-tools aws-cli openvpn qtcreator qt6 networkmanager-openvpn
-aur-packages=nvidia-container-toolkit heroku-cli-bin nvm balena-cli-bin
+aur-packages=nvidia-container-toolkit heroku-cli-bin nvm balena-cli-bin onlyoffice-bin
 services=docker.service
 groups=docker
 
