Add default options Add service

--- a/config.conf
+++ b/config.conf
@@ -49,7 +49,7 @@ command=echo "source /usr/share/nvm/init-nvm.sh" >>"/mnt/home/$username/.zshrc"
 [work]
 packages=docker docker-compose cuda cuda-tools aws-cli openvpn qtcreator qt6 networkmanager-openvpn
 aur-packages=nvidia-container-toolkit heroku-cli-bin nvm balena-cli-bin onlyoffice-bin
-services=docker.service
+services=docker.service onedrive@bastiaan.service
 groups=docker
 
 # [custom-header]
