Use KDE instead of xfce

--- a/config.conf
+++ b/config.conf
@@ -14,19 +14,20 @@ mount-path=/mnt
 username=bastiaan
 
 [bluetooth]
-packages=bluez bluez-utils
+packages=bluedevil
 services=bluetooth.service
 
 [sound]
-packages=pulseaudio pulseaudio-bluetooth
+packages=pulseaudio pulseaudio-bluetooth alsa-utils
+# services=pulseaudio.service
 
 [wifi]
 packages=iw iwd
 services=iwd.service
 
 [desktop]
-packages=xorg-server lxdm xfce4 xfwm4 xfwm4-themes xfce4-pulseaudio-plugin xfce4-wavelan-plugin xfce4-clipman-plugin xfce4-battery-plugin pavucontrol
-services=lxdm.service
+packages=breeze breeze-gtk discover drkonqi kde-cli-tools kde-gtk-config kdeplasma-addons kgamma5 khotkeys kinfocenter kmenuedit kscreen ksshaskpass ksystemstats kwayland-integration kwayland-server kwin kwrited layer-shell-qt libkscreen libksysguard milou plasma-browser-integration plasma-desktop plasma-disks plasma-firewall plasma-integration plasma-nm plasma-pa plasma-systemmonitor plasma-thunderbolt plasma-vault plasma-workspace plasma-workspace-wallpapers polkit-kde-agent sddm sddm-kcm systemsettings xdg-desktop-portal-kde dolphin dolphin-plugins filelight gwenview kcharselect kcolorchooser kcron kdf kgpg khelpcenter kirigami-gallery kleopatra kmix kolourpaint konsole ksystemlog ktimer ktorrent partitionmanager pim-data-exporter sweeper umbrello
+services=sddm.service
 
 [gpu]
 # choices are intel, nvidia, amd (case insensitive)
@@ -34,23 +35,23 @@ primary=intel
 secondary=nvidia
 
 [games]
-packages=steam lutris wine-staging giflib lib32-giflib libpng lib32-libpng libldap lib32-libldap gnutls lib32-gnutls mpg123 lib32-mpg123 openal lib32-openal v4l-utils lib32-v4l-utils libpulse lib32-libpulse libgpg-error lib32-libgpg-error alsa-plugins lib32-alsa-plugins alsa-lib lib32-alsa-lib libjpeg-turbo lib32-libjpeg-turbo sqlite lib32-sqlite libxcomposite lib32-libxcomposite libxinerama lib32-libgcrypt libgcrypt lib32-libxinerama ncurses lib32-ncurses opencl-icd-loader lib32-opencl-icd-loader libxslt lib32-libxslt libva lib32-libva gtk3 lib32-gtk3 gst-plugins-base-libs lib32-gst-plugins-base-libs vulkan-icd-loader lib32-vulkan-icd-loader wine-mono
+packages=steam lutris wine-staging giflib lib32-giflib libpng lib32-libpng libldap lib32-libldap gnutls lib32-gnutls mpg123 lib32-mpg123 openal lib32-openal v4l-utils lib32-v4l-utils libpulse lib32-libpulse libgpg-error lib32-libgpg-error alsa-plugins lib32-alsa-plugins alsa-lib lib32-alsa-lib libjpeg-turbo lib32-libjpeg-turbo sqlite lib32-sqlite libxcomposite lib32-libxcomposite libxinerama lib32-libgcrypt libgcrypt lib32-libxinerama ncurses lib32-ncurses opencl-icd-loader lib32-opencl-icd-loader libxslt lib32-libxslt libva lib32-libva gtk3 lib32-gtk3 gst-plugins-base-libs lib32-gst-plugins-base-libs vulkan-icd-loader lib32-vulkan-icd-loader wine-mono zenity openssl
 
 [personal]
-packages=firefox flameshot vlc openssh zsh code htop
+packages=firefox flameshot vlc openssh zsh code htop docker docker-compose
 aur-packages=slack-desktop teams onedrive-abraunegg discord
+groups=docker
+services=docker.service onedrive@bastiaan.service
 command=sudo -S chsh -s $(which zsh)
 command=$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)
 command=git clone https://github.com/zdharma/history-search-multi-word.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}"/plugins/history-search-multi-word
 command=git clone https://github.com/zsh-users/zsh-autosuggestions.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}"/plugins/zsh-autosuggestions
 command=git clone https://github.com/zsh-users/zsh-syntax-highlighting.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}"/plugins/zsh-syntax-highlighting
-command=echo "source /usr/share/nvm/init-nvm.sh" >>"/mnt/home/$username/.zshrc"
 
-[work]
-packages=docker docker-compose cuda cuda-tools aws-cli openvpn qtcreator qt6 networkmanager-openvpn
-aur-packages=nvidia-container-toolkit heroku-cli-bin nvm balena-cli-bin onlyoffice-bin
-services=docker.service onedrive@bastiaan.service
-groups=docker
+# [work]
+# packages=cuda cuda-tools aws-cli openvpn qtcreator qt6 networkmanager-openvpn
+# aur-packages=nvidia-container-toolkit heroku-cli-bin nvm balena-cli-bin onlyoffice-bin
+# command=echo "source /usr/share/nvm/init-nvm.sh" >>"/mnt/home/$username/.zshrc"
 
 # [custom-header]
 # packages=
