Add wacom and remove dhcpcd due to race condition

--- a/config.conf
+++ b/config.conf
@@ -6,12 +6,15 @@
 # services=
 
 [base]
-packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil dhcpcd networkmanager base-devel
+packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil networkmanager base-devel
 aur-packages=aic94xx-firmware wd719x-firmware upd72020x-fw
-services=dhcpcd.service NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@bastiaan.service
+services=NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@bastiaan.service
 boot-path=/mnt/boot
 mount-path=/mnt
 username=bastiaan
+
+[wacom-tablet]
+packages=xf86-input-wacom
 
 [bluetooth]
 packages=bluedevil
@@ -26,7 +29,7 @@ packages=iw iwd
 services=iwd.service
 
 [desktop]
-packages=breeze breeze-gtk discover drkonqi kde-cli-tools kde-gtk-config kdeplasma-addons kgamma5 khotkeys kinfocenter kmenuedit kscreen ksshaskpass ksystemstats kwayland-integration kwayland-server kwin kwrited layer-shell-qt libkscreen libksysguard milou plasma-browser-integration plasma-desktop plasma-disks plasma-firewall plasma-integration plasma-nm plasma-pa plasma-systemmonitor plasma-thunderbolt plasma-vault plasma-workspace plasma-workspace-wallpapers polkit-kde-agent sddm sddm-kcm systemsettings xdg-desktop-portal-kde dolphin dolphin-plugins filelight gwenview kcharselect kcolorchooser kcron kdf kgpg khelpcenter kirigami-gallery kleopatra kmix kolourpaint konsole ksystemlog ktimer ktorrent partitionmanager pim-data-exporter sweeper umbrello
+packages=breeze breeze-gtk discover drkonqi kde-cli-tools kde-gtk-config kdeplasma-addons kgamma5 khotkeys kinfocenter kmenuedit kscreen ksshaskpass ksystemstats kwayland-integration kwayland-server kwin kwrited layer-shell-qt libkscreen libksysguard milou plasma-browser-integration plasma-desktop plasma-disks plasma-firewall plasma-integration plasma-nm plasma-pa plasma-systemmonitor plasma-thunderbolt plasma-vault plasma-workspace plasma-workspace-wallpapers polkit-kde-agent sddm sddm-kcm systemsettings xdg-desktop-portal-kde dolphin dolphin-plugins filelight gwenview kcharselect kcolorchooser kcron kdf kgpg khelpcenter kirigami-gallery kleopatra kmix kolourpaint konsole ksystemlog ktimer ktorrent partitionmanager pim-data-exporter sweeper umbrello kcm-wacomtablet
 services=sddm.service
 
 [gpu]
