--- a/config.conf
+++ b/config.conf
@@ -6,12 +6,15 @@
 # services=
 
 [base]
-packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil networkmanager base-devel
+packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode
 aur-packages=aic94xx-firmware wd719x-firmware upd72020x-fw
 services=NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@bastiaan.service
 boot-path=/mnt/boot
 mount-path=/mnt
 username=bastiaan
+
+[webcam]
+packages=v4l-utils
 
 [wacom-tablet]
 packages=xf86-input-wacom
@@ -44,7 +47,7 @@ packages=steam lutris wine-staging giflib lib32-giflib libpng lib32-libpng libld
 
 [personal]
 packages=firefox flameshot vlc openssh zsh code htop docker docker-compose
-aur-packages=slack-desktop teams onedrive-abraunegg discord
+aur-packages=slack-desktop teams onedrive-abraunegg discord onlyoffice-bin
 groups=docker
 services=docker.service onedrive@bastiaan.service
 command=sudo -S chsh -s $(which zsh)
@@ -55,7 +58,7 @@ command=git clone https://github.com/zsh-users/zsh-syntax-highlighting.git "${ZS
 
 # [work]
 # packages=cuda cuda-tools aws-cli openvpn qtcreator qt6 networkmanager-openvpn
-# aur-packages=nvidia-container-toolkit heroku-cli-bin nvm balena-cli-bin onlyoffice-bin
+# aur-packages=nvidia-container-toolkit heroku-cli-bin nvm balena-cli-bin
 # command=echo "source /usr/share/nvm/init-nvm.sh" >>"/mnt/home/$username/.zshrc"
 
 # [custom-header]
