--- a/config.conf
+++ b/config.conf
@@ -6,12 +6,13 @@
 # services=
 
 [base]
-packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode
+packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode ntfs-3g libldm
 aur-packages=aic94xx-firmware wd719x-firmware upd72020x-fw
 services=NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@bastiaan.service
 boot-path=/mnt/boot
 mount-path=/mnt
 username=bastiaan
+command=sudo ldmtool create all
 
 [webcam]
 packages=v4l-utils
@@ -47,14 +48,12 @@ packages=steam lutris wine-staging giflib lib32-giflib libpng lib32-libpng libld
 
 [personal]
 packages=firefox flameshot vlc openssh zsh code htop docker docker-compose
-aur-packages=slack-desktop teams onedrive-abraunegg discord onlyoffice-bin
+aur-packages=slack-desktop teams onedrive-abraunegg discord onlyoffice-bin amarok
 groups=docker
 services=docker.service onedrive@bastiaan.service
 command=sudo -S chsh -s $(which zsh)
 command=$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)
-command=git clone https://github.com/zdharma/history-search-multi-word.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}"/plugins/history-search-multi-word
-command=git clone https://github.com/zsh-users/zsh-autosuggestions.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}"/plugins/zsh-autosuggestions
-command=git clone https://github.com/zsh-users/zsh-syntax-highlighting.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}"/plugins/zsh-syntax-highlighting
+command=ssh-keygen
 
 # [work]
 # packages=cuda cuda-tools aws-cli openvpn qtcreator qt6 networkmanager-openvpn
