--- a/config.conf
+++ b/config.conf
@@ -6,7 +6,7 @@
 # services=
 
 [base]
-packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode ntfs-3g libldm
+packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode iptables-nft firewalld ntfs-3g libldm
 aur-packages=aic94xx-firmware wd719x-firmware upd72020x-fw
 services=NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@bastiaan.service
 boot-path=/mnt/boot
