--- a/config.conf
+++ b/config.conf
@@ -6,13 +6,13 @@
 # services=
 
 [base]
-packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode iptables-nft firewalld ntfs-3g libldm
-aur-packages=aic94xx-firmware wd719x-firmware upd72020x-fw
-services=NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@bastiaan.service
+packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode iptables-nft firewalld ntfs-3g libldm refind
+aur-packages=aic94xx-firmware wd719x-firmware upd72020x-fw preloader-signed
+services=NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@bastiaan.service ldmtool.service
 boot-path=/mnt/boot
 mount-path=/mnt
 username=bastiaan
-command=sudo ldmtool create all
+command=sudo refind-install --preloader /usr/share/preloader-signed/PreLoader.efi
 
 [webcam]
 packages=v4l-utils
