--- a/laptop/config.conf
+++ b/laptop/config.conf
@@ -6,7 +6,7 @@
 # services=
 
 [base]
-packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode iptables-nft firewalld ntfs-3g libldm refind
+packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode iptables-nft firewalld ntfs-3g libldm refind tar linux-headers
 aur-packages=aic94xx-firmware wd719x-firmware upd72020x-fw preloader-signed
 services=NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@bastiaan.service ldmtool.service
 boot-path=/mnt/boot
@@ -33,7 +33,7 @@ packages=iw iwd
 services=iwd.service
 
 [desktop]
-packages=breeze breeze-gtk discover drkonqi kde-cli-tools kde-gtk-config kdeplasma-addons kgamma5 khotkeys kinfocenter kmenuedit kscreen ksshaskpass ksystemstats kwayland-integration kwayland-server kwin kwrited layer-shell-qt libkscreen libksysguard milou plasma-browser-integration plasma-desktop plasma-disks plasma-firewall plasma-integration plasma-nm plasma-pa plasma-systemmonitor plasma-thunderbolt plasma-vault plasma-workspace plasma-workspace-wallpapers polkit-kde-agent sddm sddm-kcm systemsettings xdg-desktop-portal-kde dolphin dolphin-plugins filelight gwenview kcharselect kcolorchooser kcron kdf kgpg khelpcenter kirigami-gallery kleopatra kmix kolourpaint konsole ksystemlog ktimer ktorrent partitionmanager pim-data-exporter sweeper umbrello kcm-wacomtablet
+packages=breeze breeze-gtk drkonqi kde-cli-tools kde-gtk-config kdeplasma-addons kgamma5 khotkeys kinfocenter kmenuedit kscreen ksshaskpass ksystemstats kwayland-integration kwayland-server kwin kwrited layer-shell-qt libkscreen libksysguard milou plasma-browser-integration plasma-desktop plasma-disks plasma-firewall plasma-integration plasma-nm plasma-pa plasma-systemmonitor plasma-thunderbolt plasma-vault plasma-workspace plasma-workspace-wallpapers polkit-kde-agent sddm sddm-kcm systemsettings xdg-desktop-portal-kde dolphin dolphin-plugins filelight gwenview kcharselect kcolorchooser kcron kdf kgpg khelpcenter kirigami-gallery kleopatra kolourpaint konsole ksystemlog ktimer ktorrent partitionmanager pim-data-exporter sweeper umbrello kcm-wacomtablet
 services=sddm.service
 
 [gpu]
@@ -43,22 +43,14 @@ secondary=nvidia
 packages=nvidia nvidia-utils nvidia-settings lib32-nvidia-utils nvidia-prime mesa lib32-mesa xf86-video-intel vulkan-intel intel-media-driver libva-intel-driver intel-gpu-tools
 services=nvidia-persistenced.service
 
-[games]
-packages=steam lutris wine-staging giflib lib32-giflib libpng lib32-libpng libldap lib32-libldap gnutls lib32-gnutls mpg123 lib32-mpg123 openal lib32-openal v4l-utils lib32-v4l-utils libpulse lib32-libpulse libgpg-error lib32-libgpg-error alsa-plugins lib32-alsa-plugins alsa-lib lib32-alsa-lib libjpeg-turbo lib32-libjpeg-turbo sqlite lib32-sqlite libxcomposite lib32-libxcomposite libxinerama lib32-libgcrypt libgcrypt lib32-libxinerama ncurses lib32-ncurses opencl-icd-loader lib32-opencl-icd-loader libxslt lib32-libxslt libva lib32-libva gtk3 lib32-gtk3 gst-plugins-base-libs lib32-gst-plugins-base-libs vulkan-icd-loader lib32-vulkan-icd-loader wine-mono zenity openssl
-
 [personal]
-packages=firefox flameshot vlc openssh zsh code htop docker docker-compose
-aur-packages=slack-desktop teams onedrive-abraunegg discord onlyoffice-bin amarok
+packages=firefox flameshot vlc openssh zsh htop docker docker-compose
+aur-packages=slack-desktop teams onedrive-abraunegg discord onlyoffice-bin amarok visual-studio-code-bin
 groups=docker
 services=docker.service onedrive@bastiaan.service
 command=sudo -S chsh -s $(which zsh)
 command=$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)
 command=ssh-keygen
-
-# [work]
-# packages=cuda cuda-tools aws-cli openvpn qtcreator qt6 networkmanager-openvpn
-# aur-packages=nvidia-container-toolkit heroku-cli-bin nvm balena-cli-bin
-# command=echo "source /usr/share/nvm/init-nvm.sh" >>"/mnt/home/$username/.zshrc"
 
 # [custom-header]
 # packages=
