Change grub to refind

--- a/laptop/config.conf
+++ b/laptop/config.conf
@@ -6,7 +6,7 @@
 # services=
 
 [base]
-packages=base linux linux-firmware git sudo man grub efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode iptables-nft firewalld ntfs-3g libldm refind tar linux-headers
+packages=base linux linux-firmware git sudo man efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode iptables-nft firewalld ntfs-3g libldm refind tar linux-headers
 aur-packages=aic94xx-firmware wd719x-firmware upd72020x-fw preloader-signed
 services=NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@bastiaan.service ldmtool.service
 boot-path=/mnt/boot
