Add ssh askpass package for vscode

--- a/laptop/config.conf
+++ b/laptop/config.conf
@@ -44,7 +44,7 @@ packages=nvidia nvidia-utils nvidia-settings lib32-nvidia-utils nvidia-prime mes
 services=nvidia-persistenced.service
 
 [personal]
-packages=firefox flameshot vlc openssh zsh htop docker docker-compose
+packages=firefox flameshot vlc openssh zsh htop docker docker-compose openssh-askpass
 aur-packages=slack-desktop teams onedrive-abraunegg discord onlyoffice-bin amarok visual-studio-code-bin
 groups=docker
 services=docker.service onedrive@bastiaan.service
