Add gst plugins remove onedrive

--- a/laptop/config.conf
+++ b/laptop/config.conf
@@ -12,7 +12,6 @@ services=NetworkManager.service systemd-networkd.service systemd-resolved.servic
 boot-path=/mnt/boot
 mount-path=/mnt
 username=bastiaan
-command=sudo refind-install --preloader /usr/share/preloader-signed/PreLoader.efi
 
 [webcam]
 packages=v4l-utils
@@ -44,11 +43,12 @@ packages=nvidia nvidia-utils nvidia-settings lib32-nvidia-utils nvidia-prime mes
 services=nvidia-persistenced.service
 
 [personal]
-packages=firefox flameshot vlc openssh zsh htop docker docker-compose openssh-askpass
-aur-packages=slack-desktop teams onedrive-abraunegg discord onlyoffice-bin amarok visual-studio-code-bin
+packages=firefox flameshot vlc openssh zsh htop docker docker-compose openssh-askpass gst-libav gst-plugins-good gst-plugins-bad gst-plugins-ugly
+aur-packages=slack-desktop teams discord onlyoffice-bin amarok visual-studio-code-bin
 groups=docker
-services=docker.service onedrive@bastiaan.service
+services=docker.service
 command=sudo -S chsh -s $(which zsh)
+command=chsh -s $(which zsh)
 command=$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)
 command=ssh-keygen
 
