Remove bluetooth from PC config

--- a/pc/config.conf
+++ b/pc/config.conf
@@ -19,12 +19,8 @@ packages=v4l-utils
 [wacom-tablet]
 packages=xf86-input-wacom
 
-[bluetooth]
-packages=bluedevil
-services=bluetooth.service
-
 [sound]
-packages=pulseaudio pulseaudio-bluetooth alsa-utils
+packages=pulseaudio alsa-utils
 # services=pulseaudio.service
 
 [desktop]
