Add kwallet autounlock

--- a/laptop/config.conf
+++ b/laptop/config.conf
@@ -32,7 +32,7 @@ packages=iw iwd
 services=iwd.service
 
 [desktop]
-packages=breeze breeze-gtk drkonqi kde-cli-tools kde-gtk-config kdeplasma-addons kgamma5 khotkeys kinfocenter kmenuedit kscreen ksshaskpass ksystemstats kwayland-integration kwayland-server kwin kwrited layer-shell-qt libkscreen libksysguard milou plasma-browser-integration plasma-desktop plasma-disks plasma-firewall plasma-integration plasma-nm plasma-pa plasma-systemmonitor plasma-thunderbolt plasma-vault plasma-workspace plasma-workspace-wallpapers polkit-kde-agent sddm sddm-kcm systemsettings xdg-desktop-portal-kde dolphin dolphin-plugins filelight gwenview kcharselect kcolorchooser kcron kdf kgpg khelpcenter kirigami-gallery kleopatra kolourpaint konsole ksystemlog ktimer ktorrent partitionmanager pim-data-exporter sweeper umbrello kcm-wacomtablet
+packages=breeze breeze-gtk drkonqi kde-cli-tools kde-gtk-config kdeplasma-addons kgamma5 khotkeys kinfocenter kmenuedit kscreen ksshaskpass ksystemstats kwayland-integration kwayland-server kwin kwrited layer-shell-qt libkscreen libksysguard milou plasma-browser-integration plasma-desktop plasma-disks plasma-firewall plasma-integration plasma-nm plasma-pa plasma-systemmonitor plasma-thunderbolt plasma-vault plasma-workspace plasma-workspace-wallpapers polkit-kde-agent sddm sddm-kcm systemsettings xdg-desktop-portal-kde dolphin dolphin-plugins filelight gwenview kcharselect kcolorchooser kcron kdf kgpg khelpcenter kirigami-gallery kleopatra kolourpaint konsole ksystemlog ktimer ktorrent partitionmanager pim-data-exporter sweeper umbrello kcm-wacomtablet kwallet-pam
 services=sddm.service
 
 [gpu]
