--- a/refind/refind.conf
+++ b/refind/refind.conf
@@ -640,6 +640,7 @@ menuentry "Arch Linux" {
     submenuentry "Boot to terminal" {
         add_options "systemd.unit=multi-user.target"
     }
+    disabled
 }
 
 # A sample entry for loading Ubuntu using its standard name for
