--- a/laptop/config.conf
+++ b/laptop/config.conf
@@ -6,8 +6,8 @@
 # services=
 
 [base]
-packages=base linux linux-firmware git sudo man efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode iptables-nft firewalld ntfs-3g libldm refind tar linux-headers
-aur-packages=aic94xx-firmware wd719x-firmware upd72020x-fw preloader-signed
+packages=base linux linux-firmware git sudo man-db efibootmgr nano vi udisks2 udevil networkmanager base-devel intel-ucode iptables-nft firewalld ntfs-3g libldm refind tar linux-headers
+aur-packages=preloader-signed udevil mkinitcpio-firmware
 services=NetworkManager.service systemd-networkd.service systemd-resolved.service devmon@bastiaan.service ldmtool.service
 boot-path=/mnt/boot
 mount-path=/mnt
@@ -43,8 +43,8 @@ packages=nvidia nvidia-utils nvidia-settings lib32-nvidia-utils nvidia-prime mes
 services=nvidia-persistenced.service
 
 [personal]
-packages=firefox flameshot vlc openssh zsh htop docker docker-compose openssh-askpass gst-libav gst-plugins-good gst-plugins-bad gst-plugins-ugly
-aur-packages=slack-desktop teams discord onlyoffice-bin amarok visual-studio-code-bin
+packages=firefox flameshot vlc openssh zsh htop docker docker-compose gst-libav gst-plugins-good gst-plugins-bad gst-plugins-ugly
+aur-packages=slack-desktop teams discord onlyoffice-bin amarok visual-studio-code-bin openssh-askpass
 groups=docker
 services=docker.service
 command=sudo -S chsh -s $(which zsh)
