Add powerdevil for laptop dependencies for battery, power and backlight control. Close #6

--- a/config.conf
+++ b/config.conf
@@ -78,6 +78,8 @@ packages=dolphin dolphin-plugins filelight sweeper
 packages=xdg-desktop-portal-kde
 # Crash handler
 packages=drkonqi
+# Power manager
+packages=powerdevil
 packages=kde-cli-tools khotkeys kinfocenter kscreen kwin milou plasma-desktop kcolorchooser
 # Theme
 packages=breeze breeze-gtk plasma-integration
