Add pc packages and settings

--- a/config.conf
+++ b/config.conf
@@ -41,6 +41,11 @@ packages=kolourpaint
 packages=ktorrent
 # Terminal
 packages=konsole
+# TU/e
+packages=openconnect networkmanager-openconnect
+aur-packages=teams onlyoffice-bin
+# Music
+packages=clementine
 
 [browser]
 packages=firefox plasma-browser-integration
@@ -84,8 +89,9 @@ services=sddm
 
 [gpu]
 # choices are intel, nvidia, amd (case insensitive)
-# primary=
-# packages=
-# services=
+primary=nvidia
+packages=nvidia nvidia-utils nvidia-settings lib32-nvidia-utils
+services=nvidia-persistenced.service
+
 # [custom-header]
 # packages=
