--- a/config.conf
+++ b/config.conf
@@ -55,6 +55,10 @@ packages=xf86-input-wacom wacomtablet
 packages=bluedevil
 services=bluetooth
 
+[bluetooth]
+packages=bluedevil
+services=bluetooth.service
+
 [sound]
 packages=pipewire-pulse pulseaudio-alsa plasma-pa wireplumber
 
