Add laptop packages and settings

--- a/config.conf
+++ b/config.conf
@@ -56,6 +56,10 @@ packages=v4l-utils
 [wacom-tablet]
 packages=xf86-input-wacom kcm-wacomtablet
 
+[bluetooth]
+packages=bluedevil
+services=bluetooth.service
+
 [sound]
 packages=pipewire-pulse pulseaudio-alsa plasma-pa
 
@@ -88,8 +92,10 @@ services=sddm
 
 [gpu]
 # choices are intel, nvidia, amd (case insensitive)
-# primary=
-# packages=
-# services=
+primary=intel
+secondary=nvidia
+packages=nvidia nvidia-utils nvidia-settings lib32-nvidia-utils nvidia-prime mesa lib32-mesa xf86-video-intel vulkan-intel intel-media-driver libva-intel-driver intel-gpu-tools
+services=nvidia-persistenced.service
+
 # [custom-header]
 # packages=
