--- a/config.conf
+++ b/config.conf
@@ -32,6 +32,7 @@ packages=nano vi
 aur-packages=visual-studio-code-bin
 
 [programs]
+aur-packages=teams onlyoffice-bin
 # libmicrodns and protobuf enable chromecast support
 packages=vlc libmicrodns protobuf gst-plugins-base-libs
 # Image viewer
