Add azure storage explorer or script for mounting azure filesystem. Close #8

--- a/config.conf
+++ b/config.conf
@@ -13,7 +13,7 @@ boot-path=/mnt/boot
 mount-path=/mnt
 
 [filesystem]
-packages=ntfs-3g libldm udisks2 plasma-disks
+packages=ntfs-3g libldm udisks2 plasma-disks fuse3
 services=ldmtool
 
 [networking]
