Add `systemd-oomd` for oom protection. Close #24

--- a/config.conf
+++ b/config.conf
@@ -8,7 +8,7 @@
 [base]
 packages=base linux linux-firmware sudo efibootmgr base-devel intel-ucode refind linux-headers
 aur-packages=preloader-signed mkinitcpio-firmware
-services=systemd-networkd.service systemd-resolved.service
+services=systemd-networkd.service systemd-resolved.service systemd-oomd.service
 boot-path=/mnt/boot
 mount-path=/mnt
 username=bastiaan
