--- a/config.conf
+++ b/config.conf
@@ -82,7 +82,7 @@ packages=drkonqi
 packages=powerdevil
 packages=kde-cli-tools khotkeys kinfocenter kscreen kwin milou plasma-desktop kcolorchooser
 # Theme
-packages=breeze breeze-gtk plasma-integration
+packages=breeze breeze-gtk plasma-integration kde-gtk-config
 services=sddm.service
 
 [gpu]
