--- a/config.conf
+++ b/config.conf
@@ -22,7 +22,7 @@ packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm
 services=NetworkManager.service
 
 [tools]
-packages=git man-db tar flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko
+packages=git man-db tar flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector
 aur-packages=nvidia-container-toolkit
 groups=docker
 services=docker.service
