--- a/config.conf
+++ b/config.conf
@@ -75,7 +75,7 @@ packages=plasma-vault polkit-kde-agent kwallet-pam kleopatra
 # File manager
 packages=dolphin dolphin-plugins filelight sweeper
 # XDG implementation
-packages=xdg-desktop-portal-kde
+packages=xdg-desktop-portal xdg-desktop-portal-kde
 # Crash handler
 packages=drkonqi
 # Power manager
