Add `gst-plugin-pipewire` for vokoscreenNG support on wayland. Close #28

--- a/config.conf
+++ b/config.conf
@@ -61,7 +61,7 @@ packages=pulseaudio pulseaudio-alsa plasma-pa
 
 [desktop]
 # Wayland support
-packages=kwayland-integration kwayland xorg-xwayland plasma-wayland-session glfw-wayland
+packages=kwayland-integration kwayland xorg-xwayland plasma-wayland-session glfw-wayland gst-plugin-pipewire
 # Qt component to allow applications to make use of the Wayland wl-layer-shell protocol
 packages=layer-shell-qt
 # KDE daemon listening for wall and write messages
@@ -80,6 +80,7 @@ packages=xdg-desktop-portal xdg-desktop-portal-kde
 packages=drkonqi
 # Power manager
 packages=powerdevil
+# KDE tools
 packages=kde-cli-tools khotkeys kinfocenter kscreen kwin milou plasma-desktop kcolorchooser
 # Theme
 packages=breeze breeze-gtk plasma-integration kde-gtk-config
