Add `gstreamer-vaapi` for hardware accelaration on wayland. Close #29

--- a/config.conf
+++ b/config.conf
@@ -61,7 +61,7 @@ packages=pulseaudio pulseaudio-alsa plasma-pa
 
 [desktop]
 # Wayland support
-packages=kwayland-integration kwayland xorg-xwayland plasma-wayland-session glfw-wayland gst-plugin-pipewire
+packages=kwayland-integration kwayland xorg-xwayland plasma-wayland-session glfw-wayland gst-plugin-pipewire gstreamer-vaapi
 # Qt component to allow applications to make use of the Wayland wl-layer-shell protocol
 packages=layer-shell-qt
 # KDE daemon listening for wall and write messages
