--- a/config.conf
+++ b/config.conf
@@ -8,24 +8,24 @@
 [base]
 packages=base linux linux-firmware sudo efibootmgr base-devel intel-ucode refind linux-headers
 aur-packages=preloader-signed mkinitcpio-firmware
-services=systemd-resolved.service systemd-oomd.service
+services=systemd-resolved systemd-oomd
 boot-path=/mnt/boot
 mount-path=/mnt
 username=bastiaan
 
 [filesystem]
 packages=ntfs-3g libldm udisks2 udevil plasma-disks
-services=ldmtool.service devmon@bastiaan.service
+services=ldmtool devmon@bastiaan
 
 [networking]
 packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm
-services=NetworkManager.service
+services=NetworkManager
 
 [tools]
 packages=git man-db tar flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector
 aur-packages=nvidia-container-toolkit
 groups=docker
-services=docker.service
+services=docker
 command=sudo -S chsh -s $(which zsh)
 command=chsh -s $(which zsh)
 command=$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)
@@ -84,7 +84,7 @@ packages=powerdevil
 packages=kde-cli-tools khotkeys kinfocenter kscreen kwin milou plasma-desktop kcolorchooser
 # Theme
 packages=breeze breeze-gtk plasma-integration kde-gtk-config
-services=sddm.service
+services=sddm
 
 [gpu]
 # choices are intel, nvidia, amd (case insensitive)
