--- a/config.conf
+++ b/config.conf
@@ -91,7 +91,7 @@ services=sddm
 # choices are intel, nvidia, amd (case insensitive)
 primary=nvidia
 packages=nvidia nvidia-utils nvidia-settings lib32-nvidia-utils
-services=nvidia-persistenced.service
+services=nvidia-persistenced
 
 # [custom-header]
 # packages=
