--- a/config.conf
+++ b/config.conf
@@ -58,7 +58,7 @@ packages=xf86-input-wacom kcm-wacomtablet
 
 [bluetooth]
 packages=bluedevil
-services=bluetooth.service
+services=bluetooth
 
 [sound]
 packages=pipewire-pulse pulseaudio-alsa plasma-pa
@@ -95,7 +95,7 @@ services=sddm
 primary=intel
 secondary=nvidia
 packages=nvidia nvidia-utils nvidia-settings lib32-nvidia-utils nvidia-prime mesa lib32-mesa xf86-video-intel vulkan-intel intel-media-driver libva-intel-driver intel-gpu-tools
-services=nvidia-persistenced.service
+services=nvidia-persistenced
 
 # [custom-header]
 # packages=
