Add `vokoscreen` to work #11

--- a/config.conf
+++ b/config.conf
@@ -21,7 +21,7 @@ packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm
 services=NetworkManager firewalld
 
 [tools]
-packages=git man-db flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector
+packages=git man-db flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector vokoscreen
 aur-packages=nvidia-container-toolkit
 groups=docker
 services=docker
