Use `networkmanager-fortisslvpn` for work #14

--- a/config.conf
+++ b/config.conf
@@ -17,8 +17,8 @@ packages=ntfs-3g libldm udisks2 plasma-disks fuse3
 services=ldmtool
 
 [networking]
-packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm
-services=NetworkManager firewalld
+packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm networkmanager-fortisslvpn
+services=NetworkManager
 
 [tools]
 packages=git man-db flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector vokoscreen
