Use `networkmanager-fortisslvpn` for work #14

--- a/config.conf
+++ b/config.conf
@@ -18,7 +18,7 @@ aur-packages=udevil
 services=ldmtool devmon@<user>
 
 [networking]
-packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm
+packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm networkmanager-fortisslvpn
 services=NetworkManager
 
 [tools]
