Use `obs-studio` instead of `vokoscreen` for screen capture. Close #32

--- a/config.conf
+++ b/config.conf
@@ -22,7 +22,7 @@ packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm network
 services=NetworkManager
 
 [tools]
-packages=git man-db tar zip unzip flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector vokoscreen
+packages=git man-db tar zip unzip flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector obs-studio
 aur-packages=nvidia-container-toolkit
 groups=docker
 services=docker
