Replace `pulseaudio` with `pipewire-pulse`. Close #35

--- a/config.conf
+++ b/config.conf
@@ -57,7 +57,7 @@ packages=v4l-utils
 packages=xf86-input-wacom kcm-wacomtablet
 
 [sound]
-packages=pulseaudio pulseaudio-alsa plasma-pa
+packages=pipewire-pulse pulseaudio-alsa plasma-pa
 
 [desktop]
 # Wayland support
