Add `libva-nvidia-driver`. Close #36

--- a/config.conf
+++ b/config.conf
@@ -90,6 +90,7 @@ services=sddm
 [gpu]
 # choices are intel, nvidia, amd (case insensitive)
 packages=nvidia nvidia-utils nvidia-settings lib32-nvidia-utils
+aur-packages=libva-nvidia-driver
 services=nvidia-persistenced
 
 # [custom-header]
