Add github actions extension to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,8 @@
 				"eamodio.gitlens",
 				"hangxingliu.vscode-systemd-support",
 				"timonwong.shellcheck",
-				"DavidAnson.vscode-markdownlint"
+				"DavidAnson.vscode-markdownlint",
+				"cschleiden.vscode-github-actions"
 			]
 		}
 	}
