--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -27,4 +27,6 @@ jobs:
 
       # Runs ShellCheck
       - name: ShellCheck
-        uses: ludeeus/action-shellcheck@1.1.0
+        uses: ludeeus/action-shellcheck@master
+        with:
+          ignore_names: .zshrc
