Replace `onlyoffice-bin` with `wps-office`. Close #37

--- a/config.conf
+++ b/config.conf
@@ -31,7 +31,7 @@ packages=nano vi
 aur-packages=visual-studio-code-bin
 
 [programs]
-aur-packages=teams onlyoffice-bin
+aur-packages=teams wps-office
 # libmicrodns and protobuf enable chromecast support
 packages=vlc libmicrodns protobuf gst-plugins-base-libs
 # Image viewer
