Replace `onlyoffice-bin` with `wps-office`. Close #37

--- a/config.conf
+++ b/config.conf
@@ -43,7 +43,7 @@ packages=ktorrent
 packages=konsole
 # TU/e
 packages=openconnect networkmanager-openconnect
-aur-packages=teams onlyoffice-bin
+aur-packages=teams wps-office
 # Music
 packages=clementine
 
