Add minidlna and config. Close #40

--- a/config.conf
+++ b/config.conf
@@ -45,7 +45,8 @@ packages=konsole
 packages=openconnect networkmanager-openconnect
 aur-packages=teams wps-office
 # Music
-packages=clementine
+packages=clementine minidlna
+services=minidlna
 
 [browser]
 packages=firefox plasma-browser-integration
