--- a/config.conf
+++ b/config.conf
@@ -8,7 +8,7 @@
 [base]
 packages=base linux linux-firmware sudo efibootmgr base-devel intel-ucode refind linux-headers
 aur-packages=preloader-signed mkinitcpio-firmware
-services=systemd-resolved systemd-oomd
+services=systemd-resolved systemd-oomd systemd-timesyncd
 boot-path=/mnt/boot
 mount-path=/mnt
 username=bastiaan
