Use azure-storage-fuse aur package instead of compile from scratch. Close #42

--- a/config.conf
+++ b/config.conf
@@ -13,8 +13,8 @@ boot-path=/mnt/boot
 mount-path=/mnt
 
 [filesystem]
-packages=ntfs-3g libldm udisks2 plasma-disks fuse3
-services=ldmtool
+packages=ntfs-3g libldm udisks2 plasma-disks fuse3 azure-storage-fuse
+services=ldmtool blobfuse2
 
 [networking]
 packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm networkmanager-fortisslvpn
