Use azure-storage-fuse aur package instead of compile from scratch. Close #42

--- a/config.conf
+++ b/config.conf
@@ -13,9 +13,9 @@ boot-path=/mnt/boot
 mount-path=/mnt
 
 [filesystem]
-packages=ntfs-3g libldm udisks2 plasma-disks fuse3
+packages=ntfs-3g libldm udisks2 plasma-disks fuse3 azure-storage-fuse
 aur-packages=udevil
-services=ldmtool devmon@<user>
+services=ldmtool devmon@<user> blobfuse2
 
 [networking]
 packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm networkmanager-fortisslvpn
