Packages in the wrong group. Close #44

--- a/config.conf
+++ b/config.conf
@@ -14,7 +14,8 @@ mount-path=/mnt
 username=bastiaan
 
 [filesystem]
-packages=ntfs-3g libldm udisks2 udevil plasma-disks
+packages=ntfs-3g libldm udisks2 plasma-disks
+aur-packages=udevil
 services=ldmtool devmon@bastiaan
 
 [networking]
