Add `wireplumber` to sound. Close #45

--- a/config.conf
+++ b/config.conf
@@ -58,7 +58,7 @@ packages=v4l-utils
 packages=xf86-input-wacom kcm-wacomtablet
 
 [sound]
-packages=pipewire-pulse pulseaudio-alsa plasma-pa
+packages=pipewire-pulse pulseaudio-alsa plasma-pa wireplumber
 
 [desktop]
 # Wayland support
