Fix azure-storage-fuse not found error

--- a/config.conf
+++ b/config.conf
@@ -13,7 +13,8 @@ boot-path=/mnt/boot
 mount-path=/mnt
 
 [filesystem]
-packages=ntfs-3g libldm udisks2 plasma-disks fuse3 azure-storage-fuse
+packages=ntfs-3g libldm udisks2 plasma-disks fuse3
+aur-packages=azure-storage-fuse
 services=ldmtool blobfuse2
 
 [networking]
