--- a/config.conf
+++ b/config.conf
@@ -13,8 +13,8 @@ boot-path=/mnt/boot
 mount-path=/mnt
 
 [filesystem]
-packages=ntfs-3g libldm udisks2 plasma-disks fuse3 azure-storage-fuse
-aur-packages=udevil
+packages=ntfs-3g libldm udisks2 plasma-disks fuse3
+aur-packages=udevil azure-storage-fuse
 services=ldmtool devmon@<user> blobfuse2
 
 [networking]
