Add `pavucontrol` to share audio through mic. Close #64

--- a/config.conf
+++ b/config.conf
@@ -62,7 +62,7 @@ packages=bluedevil
 services=bluetooth.service
 
 [sound]
-packages=pipewire-pulse pulseaudio-alsa plasma-pa wireplumber
+packages=pipewire-pulse pulseaudio-alsa plasma-pa wireplumber pavucontrol
 
 [desktop]
 # Wayland support
