Add `teamviewer`. Close #57

--- a/config.conf
+++ b/config.conf
@@ -32,7 +32,7 @@ packages=nano vi
 aur-packages=visual-studio-code-bin
 
 [programs]
-aur-packages=teams wps-office
+aur-packages=teams wps-office teamviewer
 # libmicrodns and protobuf enable chromecast support
 packages=vlc libmicrodns protobuf gst-plugins-base-libs
 # Image viewer
