Add `libtiff5` for `wpspdf` in `wps-office`. Close #60

--- a/config.conf
+++ b/config.conf
@@ -43,7 +43,10 @@ packages=ktorrent
 packages=konsole
 # TU/e
 packages=openconnect networkmanager-openconnect
-aur-packages=teams wps-office
+aur-packages=teams
+# wps-office and its optional dependencies.
+aur-packages=libtiff5 wps-office-fonts wps-office-mime wps-office
+packages=libjpeg-turbo
 # Music
 packages=clementine minidlna
 services=minidlna
