Replace clementine with elisa. Close #67

--- a/config.conf
+++ b/config.conf
@@ -48,7 +48,7 @@ aur-packages=teams
 aur-packages=libtiff5 wps-office-fonts wps-office-mime wps-office
 packages=libjpeg-turbo
 # Music
-packages=clementine minidlna
+packages=elisa minidlna
 services=minidlna
 
 [browser]
