Add `libtiff5` for `wpspdf` in `wps-office`. Close #60

--- a/config.conf
+++ b/config.conf
@@ -32,7 +32,10 @@ packages=nano vi
 aur-packages=visual-studio-code-bin
 
 [programs]
-aur-packages=teams wps-office teamviewer
+aur-packages=teams teamviewer
+# wps-office and its optional dependencies.
+aur-packages=libtiff5 wps-office-fonts wps-office-mime wps-office
+packages=libjpeg-turbo
 # libmicrodns and protobuf enable chromecast support
 packages=vlc libmicrodns protobuf gst-plugins-base-libs
 # Image viewer
