--- a/config.conf
+++ b/config.conf
@@ -18,7 +18,7 @@ aur-packages=azure-storage-fuse
 services=ldmtool blobfuse2
 
 [networking]
-packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm networkmanager-fortisslvpn
+packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm networkmanager-fortisslvpn networkmanager-l2tp
 services=NetworkManager
 
 [tools]
