--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
 				"hangxingliu.vscode-systemd-support",
 				"timonwong.shellcheck",
 				"DavidAnson.vscode-markdownlint",
-				"cschleiden.vscode-github-actions",
+				"GitHub.vscode-github-actions",
 				"ms-azuretools.vscode-docker",
 				"mads-hartmann.bash-ide-vscode"
 			],
