--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,1 @@
-FROM mcr.microsoft.com/devcontainers/base:alpine-3.16
-
-RUN apk add \
-    util-linux
+FROM mcr.microsoft.com/devcontainers/base:debian
