--- a/filesystem/boot/loader/entries/arch.conf
+++ b/filesystem/boot/loader/entries/arch.conf
@@ -2,4 +2,4 @@ title   Arch Linux
 linux   /vmlinuz-linux
 initrd  /intel-ucode.img
 initrd  /initramfs-linux.img
-options root="LABEL=arch_os" rw nvidia-drm.modeset=1 ibt=off
+options root="LABEL=arch_os" rw nvidia-drm.modeset=1
