Add `pam_autologin`. Close #69

--- a/config.conf
+++ b/config.conf
@@ -68,7 +68,7 @@ packages=libksysguard systemsettings plasma-systemmonitor ksystemstats
 # Login manager
 packages=sddm sddm-kcm
 # Password storage
-packages=plasma-vault polkit-kde-agent kwallet-pam kleopatra
+packages=plasma-vault polkit-kde-agent kwallet-pam pam_autologin kleopatra
 # File manager
 packages=dolphin dolphin-plugins filelight sweeper
 # XDG implementation
