--- a/config.conf
+++ b/config.conf
@@ -12,6 +12,7 @@ services=systemd-resolved systemd-oomd systemd-timesyncd fstrim.timer systemd-bo
 boot-path=/mnt/boot
 mount-path=/mnt
 username=bastiaan
+hostname=PC-BASTIAAN
 
 [filesystem]
 packages=ntfs-3g libldm udisks2 plasma-disks
