Fix failed to install several packages

--- a/config.conf
+++ b/config.conf
@@ -59,7 +59,7 @@ packages=pipewire-pulse pulseaudio-alsa plasma-pa wireplumber
 
 [desktop]
 # Wayland support
-packages=kwayland-integration kwayland xorg-xwayland plasma-wayland-session glfw-wayland gst-plugin-pipewire gstreamer-vaapi
+packages=kwayland-integration xorg-xwayland plasma-wayland-session glfw-wayland gst-plugin-pipewire gstreamer-vaapi
 # Qt component to allow applications to make use of the Wayland wl-layer-shell protocol
 packages=layer-shell-qt
 # KDE daemon listening for wall and write messages
@@ -69,7 +69,8 @@ packages=libksysguard systemsettings plasma-systemmonitor ksystemstats
 # Login manager
 packages=sddm sddm-kcm
 # Password storage
-packages=plasma-vault polkit-kde-agent kwallet-pam pam_autologin kleopatra
+packages=plasma-vault polkit-kde-agent kwallet-pam kleopatra
+aur-packages=pam_autologin
 # File manager
 packages=dolphin dolphin-plugins filelight sweeper
 # XDG implementation
