Revert "Enable `systemd-boot-update.service` to update `systemd-boot` automatically next boot. Close #52"
This reverts commit c03caed355af6e6015b8f58371389edc4ebef976.

--- a/config.conf
+++ b/config.conf
@@ -8,7 +8,7 @@
 [base]
 packages=base linux linux-firmware sudo efibootmgr base-devel intel-ucode refind linux-headers
 aur-packages=preloader-signed mkinitcpio-firmware locale-en-nl-git
-services=systemd-resolved systemd-oomd systemd-timesyncd fstrim.timer systemd-boot-update
+services=systemd-resolved systemd-oomd systemd-timesyncd fstrim.timer
 boot-path=/mnt/boot
 mount-path=/mnt
 username=bastiaan
