--- a/config.conf
+++ b/config.conf
@@ -24,7 +24,7 @@ packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm
 services=NetworkManager
 
 [tools]
-packages=git man-db tar flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector
+packages=git man-db tar zip unzip flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector
 aur-packages=nvidia-container-toolkit
 groups=docker
 services=docker
