Remove incompatible package

--- a/config.conf
+++ b/config.conf
@@ -92,7 +92,7 @@ services=sddm
 
 [gpu]
 # choices are intel, nvidia, amd (case insensitive)
-packages=libva-nvidia-driver nvidia-prime mesa lib32-mesa xf86-video-intel vulkan-intel intel-media-driver libva-intel-driver intel-gpu-tools
+packages=libva-nvidia-driver mesa lib32-mesa xf86-video-intel vulkan-intel intel-media-driver libva-intel-driver intel-gpu-tools
 aur-packages=nvidia-470xx-dkms nvidia-470xx-utils nvidia-470xx-settings lib32-nvidia-470xx-utils
 services=nvidia-persistenced
 
