Replace user services in config.conf

--- a/config.conf
+++ b/config.conf
@@ -11,13 +11,11 @@ aur-packages=preloader-signed mkinitcpio-firmware locale-en-nl-git
 services=systemd-resolved systemd-oomd systemd-timesyncd fstrim.timer
 boot-path=/mnt/boot
 mount-path=/mnt
-username=bastiaan
-hostname=PC-BASTIAAN
 
 [filesystem]
 packages=ntfs-3g libldm udisks2 plasma-disks
 aur-packages=udevil
-services=ldmtool devmon@bastiaan
+services=ldmtool devmon@<user>
 
 [networking]
 packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm
